[package]
name = "lbc-miner"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
hip = []
opencl = ["dep:opencl3"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
opencl3 = { version = "0.12", optional = true }
ripemd = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
